# opentrack

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  FaceTrackNoIR.sln  FaceTrackNoIR_vc8.sln  FaceTrackNoIR_vc9.sln  IMU_INTEGRATION_TEST_PLAN.md  LICENSE  List of compatible games.xls  List of compatible webcams.xls  OPENHMD_COORDINATE_ANALYSIS.md  OPENHMD_FIX_SUMMARY.md  OPENTRACK-LICENSING.md  OPENTRACK-LICENSING.txt  PR_DRAFT_alpha_spectrum.md  README  README.md  ReadMe.txt  TODO.txt  WARRANTY.txt  azure-pipelines.yml  facetracknoir_vc9.sln  install-fail-tool  list of compatible games.xls  make-tar.sh  modules.txt  opentrack-version.h  opentrack.code-workspace  readme.md  readme.txt  sdk-paths-runner@AppleClang-Darwin.cmake  sdk-paths-runner@GNU-Linux.cmake  sdk-paths-runneradmin@GNU-Linux.cmake  (+9 more)
compat/: CMakeLists.txt  activation-context.cpp  activation-context.hpp  arch.hpp  base-path.cpp  base-path.hpp  camera-names.cpp  camera-names.hpp  camera_names_mac.mm  check-visible.cpp  check-visible.hpp  clamp.hpp  compat.cpp  compat.h  copyable-mutex.cpp  copyable-mutex.hpp  correlation-calibrator.cpp  correlation-calibrator.hpp  dquat.cpp  dquat.hpp  enum-operators.hpp  euler.cpp  euler.hpp  export.hpp  functional.hpp  hamilton-tools.cpp  hamilton-tools.h  library-path.hpp  linkage-macros.hpp  linkage.hpp  macros.h  macros.hpp  macros1.h  make-unique.hpp  math-imports.hpp  math.hpp  meta.hpp  mutex.cpp  mutex.hpp  nan.cpp  (+46 more)
cv/: CMakeLists.txt  affine.cpp  affine.hpp  camera-dialog.cpp  camera-dialog.hpp  camera-dialog.hpp.OO4364  export.hpp  init.cpp  init.hpp  numeric.hpp  ocv-check.cxx  translation-calibrator.cpp  translation-calibrator.hpp  video-property-page.cpp  video-property-page.cpp_  video-property-page.hpp  video-widget.cpp  video-widget.hpp
gui/: CMakeLists.txt  correlation-calibrator.ui  curve-config.cpp  curve-config.h  export.hpp  hotview-autoinstall.cpp  hotview-keybinding-dialog.cpp  hotview-keybinding-dialog.hpp  hotview-table.cpp  hotview-table.hpp  init.cpp  init.hpp  keyboard.cpp  keyboard.h  keyboard_listener.ui  library-path.hpp  listener.cpp  listener.h  main-window.cpp  main-window.hpp  main-window.ui  main.cpp  main.ui  mapping-dialog.cpp  mapping-dialog.hpp  mapping-dialog.ui  mapping-window.cpp  mapping-window.hpp  mapping-window.ui  mapping.ui  new_file_dialog.h  opentrack-res.qrc  options-dialog.cpp  options-dialog.hpp  options-dialog.ui  process-detector-fancy-table.cpp  process-detector-fancy-table.hpp  process_detector.cpp  process_detector.h  process_widget.ui  (+18 more)
input/: CMakeLists.txt  dinput.cpp  dinput.hpp  export.hpp  gameinput.cpp  gameinput.hpp  key-opts.cpp  key-opts.hpp  key.cpp  key.hpp  keybinding-worker.cpp  keybinding-worker.hpp  shortcuts.cpp  shortcuts.h  win32-joystick.cpp  win32-joystick.hpp  win32-shortcuts.cpp  win32-shortcuts.h
macosx/: CMakeLists.txt  Info.plist  dmgSettings.py  entitlements.plist  install-fail-tool  make-app-bundle.sh  opentrack.sh  qt.conf
opentrack/: CMakeLists.txt  appnap_mac.mm  camera-names.cpp  camera-names.hpp  dbus.cpp  dbus.hpp  defs.hpp  dtors.cpp  export.hpp  ftnoir_keyboardshortcuts.ui  global-shortcuts.cpp  global-shortcuts.h  import.hpp  is-window-visible.hpp  keybinding-worker.cpp  keybinding-worker.hpp  keyboard.ui  library-path.cpp  library-path.hpp  main-settings.hpp  main-window.cpp  main-window.hpp  main-window.ui  main.cpp  mappings.hpp  new_config.ui  new_file_dialog.cpp  new_file_dialog.h  opencv-calibration.hpp  opencv-camera-dialog.hpp  options.hpp  plugin-api.cpp  plugin-api.hpp  plugin-qt-api.hpp  plugin-support.cpp  plugin-support.h  plugin-support.hpp  pose.hpp  quat.hpp  resources.rc  (+24 more)
opentrack-logic/: CMakeLists.txt  dinput.cpp  dinput.hpp  export.hpp  import.hpp  keybinding-worker.cpp  keybinding-worker.hpp  main-settings.hpp  mappings.hpp  nan.cpp  nan.hpp  selected-libraries.hpp  shortcuts.cpp  shortcuts.h  simple-mat.cpp  simple-mat.hpp  state.hpp  tracker.cpp  tracker.h  tracklogger.cpp  tracklogger.hpp  win32-joystick.cpp  win32-joystick.hpp  win32-shortcuts.cpp  work.cpp  work.hpp
pose-widget/: CMakeLists.txt  ReadMe.txt  export.hpp  glwidget.cpp  glwidget.h  pose-widget.cpp  pose-widget.hpp  posewidget.qrc
proto-fsuipc/: CMakeLists.txt  ftnoir_fsuipccontrols.ui  ftnoir_protocol_fsuipc.cpp  ftnoir_protocol_fsuipc.h  ftnoir_protocol_fsuipc_dialog.cpp
proto-libevdev/: CMakeLists.txt  ftnoir_libevdev_controls.ui  ftnoir_protocol_libevdev.cpp  ftnoir_protocol_libevdev.h  ftnoir_protocol_libevdev_dialog.cpp
proto-vjoy/: CMakeLists.txt  ftnoir_protocol_vjoy.cpp  ftnoir_protocol_vjoy.h  ftnoir_protocol_vjoy_dialog.cpp  ftnoir_vjoy_controls.ui  vjoy.def
proto-vjoystick/: CMakeLists.txt  vjoystick.cpp  vjoystick.h  vjoystick.qrc  vjoystick.ui  vjoystick_dialog.cpp
proto-wine/: CMakeLists.txt  ftnoir_protocol_wine.cpp  ftnoir_protocol_wine.h  ftnoir_protocol_wine_dialog.cpp  ftnoir_winecontrols.ui  opentrack-wrapper-wine-main.cxx  opentrack-wrapper-wine-posix.cxx  opentrack-wrapper-wine-windows.cxx  proton.cpp  proton.h  wine-protocol.qrc  wine-shm.h  wrapper-wine
qxt-mini/: CMakeLists.txt  QxtGlobalShortcut  powerset.hpp  qxtglobal.h  qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_mac.cpp  qxtglobalshortcut_p.h  qxtglobalshortcut_x11.cpp  x11-keymap.cpp  x11-keymap.hpp
spline-widget/: CMakeLists.txt  functionconfig.cpp  functionconfig.h  qfunctionconfigurator.cpp  qfunctionconfigurator.h  spline-widget.cpp  spline-widget.hpp  spline.cpp  spline.hpp
tracker-aruco/: CMakeLists.txt  ar_video_widget.cpp  ar_video_widget.h  aruco-trackercontrols.ui  ftnoir_tracker_aruco.cpp  ftnoir_tracker_aruco.h  pt_video_widget.cpp  pt_video_widget.h  trans_calib.cpp  trans_calib.h
tracker-easy/: CMakeLists.txt  FTNoIR_PT_Controls.ui  camera.h  cv-point-extractor.cpp  cv-point-extractor.h  frame.cpp  frame.hpp  ftnoir_tracker_pt_dialog.cpp  ftnoir_tracker_pt_dialog.h  kalman-filter-pose.cpp  kalman-filter-pose.h  module.cpp  module.hpp  ocv-check.cxx  point-extractor.h  (+15 more)
(+1919 files in other folders)
