otr_module(input BIN)

if(WIN32)
    set(gameinput-enabled 0)
    target_link_libraries(${self} PRIVATE dinput8 dxguid)
    set(SDK_GAMEINPUT "" CACHE PATH "")
    if(NOT SDK_GAMEINPUT STREQUAL "")
        set(subdir "")
        if (CMAKE_SYSTEM_PROCESSOR MATCHES "AMD64|x86_64")
            set(subdir "x64")
        endif()
        if(NOT subdir STREQUAL "")
            set(gameinput-enabled 1)
            target_include_directories(${self} SYSTEM PRIVATE "${SDK_GAMEINPUT}/include")
        endif()
    endif()
    if(gameinput-enabled)
        target_compile_definitions(${self} PUBLIC OPENTRACK_HAS_GAMEINPUT=1)
    else()
        target_compile_definitions(${self} PUBLIC OPENTRACK_HAS_GAMEINPUT=0)
    endif()
else()
    target_link_libraries(${self} PRIVATE opentrack-qxt-mini)
endif()
