opentrack_boilerplate(opentrack-logic)
target_link_libraries(opentrack-logic opentrack-spline-widget)
if(NOT WIN32)
    target_link_libraries(opentrack-logic opentrack-qxt-mini)
else()
    target_link_libraries(opentrack-logic winmm)
endif()
if(CMAKE_COMPILER_IS_GNUCXX)
    set_source_files_properties(nan.cpp PROPERTIES COMPILE_FLAGS "-fno-fast-math -fno-finite-math-only -fno-fast-math -O2")
endif()
