if(WIN32 AND NOT opentrack-64bit AND opentrack-intel)
    set(SDK_FSUIPC "" CACHE PATH "FSUIPC for older MS FSX path")
    if(SDK_FSUIPC)
        otr_module(proto-fsuipc)
        target_link_libraries(opentrack-proto-fsuipc ${SDK_FSUIPC}/FSUIPC_User.lib)
        target_include_directories(opentrack-proto-fsuipc SYSTEM PUBLIC ${SDK_FSUIPC})
        if(MSVC)
            set_property(TARGET opentrack-proto-fsuipc APPEND_STRING PROPERTY
                         LINK_FLAGS "-NODEFAULTLIB:LIBC.lib ")
        endif()
    endif()
endif()
