if(WIN32 AND NOT opentrack-64bit AND opentrack-intel)
    set(SDK_FSUIPC "" CACHE PATH "FSUIPC for older MS FSX path")
    if(SDK_FSUIPC)
        otr_module(proto-fsuipc)
        target_link_libraries(opentrack-proto-fsuipc PRIVATE "${SDK_FSUIPC}/FSUIPC_User.lib")
        target_include_directories(opentrack-proto-fsuipc SYSTEM PUBLIC ${SDK_FSUIPC})
        if(MSVC)
            target_link_options(${self} PRIVATE -NODEFAULTLIB:LIBC.lib)
        endif()
    endif()
endif()
