if(LINUX OR APPLE)
    set(SDK_ENABLE_LIBEVDEV FALSE CACHE BOOL "libevdev virtual joystick protocol support")
    if(SDK_ENABLE_LIBEVDEV)
        include(FindPkgConfig)
        opentrack_boilerplate(opentrack-proto-libevdev)
        pkg_check_modules(libevdev REQUIRED QUIET libevdev)
        target_link_libraries(opentrack-proto-libevdev ${libevdev_LIBRARIES})
        include_directories(opentrack-proto-libevdev SYSTEM PUBLIC ${libevdev_INCLUDE_DIRS})
    endif()
endif()
