if(LINUX)
    pkg_check_modules(libevdev QUIET libevdev)
    if(libevdev_FOUND)
        otr_module(proto-libevdev)
        target_link_libraries(opentrack-proto-libevdev PRIVATE ${libevdev_LIBRARIES})
        target_include_directories(opentrack-proto-libevdev SYSTEM PUBLIC ${libevdev_INCLUDE_DIRS})
    endif()
endif()
