if(WIN32 AND opentrack-intel)
    set(SDK_VJOYSTICK "" CACHE PATH "vjoystick SDK path")
    if(SDK_VJOYSTICK)
        if(opentrack-64bit)
            set(arch "amd64/")
        else()
            set(arch "")
        endif()
        set(lib "${SDK_VJOYSTICK}/lib/${arch}vJoyInterface.lib")
        set(dll "${SDK_VJOYSTICK}/lib/${arch}vJoyInterface.dll")
        otr_module(proto-vjoy)
        target_link_libraries(opentrack-proto-vjoy PRIVATE ${lib})
        target_include_directories(opentrack-proto-vjoy SYSTEM PUBLIC "${SDK_VJOYSTICK}/inc")
        install(FILES "${dll}" DESTINATION ${opentrack-libexec})
    endif()
endif()
