if(UNIX OR APPLE)
    opentrack_boilerplate(opentrack-qxt-mini NO-COMPAT BIN)
    if(NOT APPLE)
        target_link_libraries(opentrack-qxt-mini X11)
    else()
        set_property(TARGET opentrack-qxt-mini APPEND_STRING PROPERTY LINK_FLAGS "-framework Carbon -framework CoreFoundation")
    endif()
endif()
