if(UNIX OR APPLE)
    set(self opentrack-qxt-mini)
    otr_module(qxt-mini NO-COMPAT BIN)
    if(NOT APPLE AND NOT WINDOWS AND QT_VERSION VERSION_GREATER_EQUAL 6.10.0)
        find_package(Qt6 REQUIRED COMPONENTS GuiPrivate QUIET)
        target_link_libraries(${self} PRIVATE Qt6::GuiPrivate)
    else()
        include_directories(SYSTEM ${Qt6Gui_PRIVATE_INCLUDE_DIRS})
    endif()
    if(APPLE)
        find_library(CoreFoundation CoreFoundation)
        find_library(Carbon Carbon)
        target_link_options(${self} PUBLIC -framework Carbon -I ${CoreFoundation})
    else()
        otr_pkgconfig(${self} x11 xcb xproto)
    endif()
    target_compile_definitions(${self} PRIVATE -DQXT_BUILD)
endif()
